--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
   <form action="/start" method="post">
     <input type="text" name="root_node" placeholder="Enter your root query..." required>
-    <input type="submit" value="Begin Inception">
+    <input type="submit" value="Begin">
   </form>
 
   {% if modulated_thought %}
